--- a/tryggve.query1.v2/tryggve.query1.v2.Rmd
+++ b/tryggve.query1.v2/tryggve.query1.v2.Rmd
@@ -323,8 +323,8 @@ query1.3_sex %>%
   pivot_wider(names_from = tcb_sex, values_from = c(N_sex, prop_sex),values_fill = list(seen = 0)) %>% 
   select(tcb_cohort, tcb_subcohort, N_sex_F, prop_sex_F, N_sex_M, prop_sex_M) %>% 
   # rename for better presentation, together with add_header_above() row below
-  rename(N = N_sex_F, "%" = prop_sex_F,
-         N = N_sex_M, "%" = prop_sex_M) %>%
+  rename(N_F = N_sex_F, "%_F" = prop_sex_F,
+         N_M = N_sex_M, "%_M" = prop_sex_M) %>%
   # use kable() to make a nice table
   kable() %>% 
   kable_styling("striped", full_width = F) %>%
